# ChessRobot

./: .gitignore  CMakeLists.txt  ChessRobot2.sln  README.md
ChessRobot/: ChessRobot.cpp  stdafx.cpp
ChessRobot2/: ChessRobot2.vcxproj  ChessRobot2.vcxproj.filters  ReadMe.txt
